--- a/farm-management/src/main/resources/application.properties
+++ b/farm-management/src/main/resources/application.properties
@@ -1,1 +1,10 @@
 spring.application.name=farm-management
+spring.datasource.url=jdbc:mysql://localhost:3306/farmdb
+spring.datasource.username=root
+spring.datasource.password=password
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+
